[package]
name = "public_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Domestic dependencies

# Foreign dependencies
hyper.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true