[package]
name = "types"
authors = ["zhandrii"]
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Domestic dependencies

# Foreign dependencies
hyper.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true